# ScaffoldMC

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  README.md  apps.code-workspace  eslint.config.mjs  justfile  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: .gitignore  Cargo.toml  package.json  project.json
apps/backend/migrations/: 20250525031243_init.sql
apps/backend/src/: auth.rs  backend.rs  config.rs  db.rs  logger.rs  main.rs  routes.rs  secrets.rs  server.rs  server_instance.rs  user.rs
apps/backend/src/api/middleware/: auth.rs  log.rs  mod.rs  server.rs
apps/backend/src/api/routes/: auth.rs  games.rs  jvms.rs  me.rs  mod.rs  servers.rs
apps/backend/src/api/routes/auth/: login.rs  logout.rs  mod.rs  refresh.rs  sudo.rs
apps/backend/src/api/routes/binaries/: mod.rs
apps/backend/src/api/routes/me/: mod.rs  username.rs
apps/backend/src/api/routes/servers/: mod.rs
apps/backend/src/api/types/: auth.rs  mod.rs  server.rs  user.rs  versions.rs
apps/backend/src/api_clients/: fabric_meta.rs  mod.rs  paper_meta.rs  piston_meta.rs
apps/backend/src/api_types/: user.rs
apps/backend/src/bin_providers/: fabric.rs  mod.rs  paper.rs  vanilla.rs
apps/backend/src/core/: game.rs  java.rs  mod.rs  secrets.rs  server.rs
apps/backend/src/core/api_clients/: fabric.rs  fabric_meta.rs  mod.rs  paper.rs  paper_meta.rs  piston_meta.rs
apps/backend/src/core/bin_providers/: fabric.rs  mod.rs  mojang_java.rs  paper.rs  vanilla.rs
apps/backend/src/core/config/: game.rs  mod.rs
apps/backend/src/core/files/: binaries_lockfile.rs  server_config.rs
apps/backend/src/core/game/: java.rs  mod.rs
apps/backend/src/core/server/: config.rs  instance.rs
apps/backend/src/core/util/: mod.rs
apps/backend/src/core/version/: fabric.rs  mod.rs  mojang_java.rs  paper.rs  vanilla.rs
apps/backend/src/db/: mod.rs  refresh_token.rs  user.rs
apps/backend/src/db/models/: refresh_token.rs  user.rs
apps/backend/src/db/repositories/: refresh_token.rs  user.rs
apps/backend/src/models/: hash.rs  mod.rs  server.rs  vfs.rs
apps/backend/src/models/file_manager/: mod.rs  scoped.rs  types.rs
apps/backend/src/models/file_schemas/: binaries_lockfile.rs
apps/backend/src/models/files/: binaries_lockfile.rs  mod.rs  server_config.rs
apps/backend/src/models/game/: java.rs
apps/backend/src/routes/: auth.rs  me.rs  servers.rs
apps/backend/src/server/: config.rs  game.rs  instance.rs  mod.rs  mojang_api.rs
apps/backend/src/services/: auth.rs  binary.rs  game.rs  java.rs  mod.rs  server.rs  user.rs
apps/backend/src/util/: download.rs  hash.rs  mod.rs  request.rs
(+172 files in other folders)
