[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
axum-server = "0.7.2"
base64 = "0.22.1"
colored = "3.0.0"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
password-auth = "1.0.0"
rand = "0.9.1"
serde = "1.0.219"
sqlx = { version = "0.8.5", features = [
	"sqlite",
	"time",
	"runtime-tokio",
	"uuid",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-service = "0.3.3"
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[dev-dependencies]
watchexec-cli = "2.3.0"
