[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lints.rust]
dead_code = "allow"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.8.3", features = ["macros"] }
axum-server = "0.7.2"
base64 = "0.22.1"
colored = "3.0.0"
digest = { version = "0.10.7", features = ["std"] }
futures-util = "0.3.31"
hex = { version = "0.4.3", features = ["serde"] }
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
log = "0.4.27"
password-auth = "1.0.0"
pem = { version = "3.0.5", features = ["serde"] }
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["json"] }
rsa = { version = "0.9.8", features = ["pkcs5"] }
serde = "1.0.219"
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.9"
sqlx = { version = "0.8.5", features = [
	"sqlite",
	"time",
	"runtime-tokio",
	"uuid",
] }
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["cors"] }
tower-service = "0.3.3"
ts-rs = { version = "11.0.0", features = ["uuid-impl"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[dev-dependencies]
watchexec-cli = "2.3.0"
